{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 49,
  "lineage": "1d51cfb6-727e-2b8b-6610-76fb84ba185a",
  "resources": [
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-062cddb9d94dcf95d",
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:instance/i-0c277d07a96639d00",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c277d07a96639d00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "KTB-personal-project-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009308ab13a12812f",
            "private_dns": "ip-10-0-1-6.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-13-209-16-72.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.16.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e0c3c90de0d33a9f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012f15ab574bcf7f9",
            "tags": {
              "Environment": "shared",
              "Name": "bastion",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "bastion",
              "Project": "KTB-personal-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d1bb7b65b9f3335"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-05d1bb7b65b9f3335",
            "description": "Allow SSH from Developer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d1bb7b65b9f3335",
            "ingress": [
              {
                "cidr_blocks": [
                  "211.244.225.164/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "shared",
              "Name": "bastion-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "bastion-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-08122a26c38f3198f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-from-developer",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "211.244.225.164/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1284941346",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05d1bb7b65b9f3335",
            "security_group_rule_id": "sgr-0cb8edac2a2d61097",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-426612263",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05d1bb7b65b9f3335",
            "security_group_rule_id": "sgr-0d28d2b832bfaf22f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:internet-gateway/igw-085e20a10eb1433ef",
            "id": "igw-085e20a10eb1433ef",
            "owner_id": "590183972842",
            "tags": {
              "Environment": "shared",
              "Name": "shared-vpc-igw",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "shared-vpc-igw",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-08122a26c38f3198f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:route-table/rtb-048917e25f8f5ce97",
            "id": "rtb-048917e25f8f5ce97",
            "owner_id": "590183972842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085e20a10eb1433ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "shared",
              "Name": "shared-vpc-public-rt",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "shared-vpc-public-rt",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-08122a26c38f3198f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a-10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0880937524c3d97e7",
            "route_table_id": "rtb-048917e25f8f5ce97",
            "subnet_id": "subnet-012f15ab574bcf7f9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a-10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-012f15ab574bcf7f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012f15ab574bcf7f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "Name": "shared-vpc-public-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "shared-vpc-public-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-08122a26c38f3198f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:vpc/vpc-08122a26c38f3198f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06bd462b7c3dc51a1",
            "default_route_table_id": "rtb-0647f3cdb4d3b0d5c",
            "default_security_group_id": "sg-0b25be034d1ce5d0c",
            "dhcp_options_id": "dopt-0c2a02f151f60cfe0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08122a26c38f3198f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0647f3cdb4d3b0d5c",
            "owner_id": "590183972842",
            "tags": {
              "Environment": "shared",
              "Name": "shared-vpc",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "shared",
              "Name": "shared-vpc",
              "Project": "KTB-personal-project"
            }
          }
        }
      ]
    }
  ]
}